# listfluff

./: README.md  listfluff.py  pyproject.toml  requirements.txt
src/: add.py  helpers.py  remove.py
src/listfluff/: app.py
